<resources>
    <string name="app_name">PodcastPlayer</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="this_field_cant_be_empty">This field can\'t be empty!</string>
    <string name="password_too_short">Password too short! At least 6 chars.</string>
    <string name="not_an_email">This is not a valid email!</string>
    <string name="create_account">Create account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_discover">Discover</string>
    <string name="menu_subscribe">Subscribe</string>
    <string name="logout">Logout</string>
    <string name="registered_account">Registered account. Now log into the application.</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
</resources>